--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "angular": "^1.4.7",
+    "angular-bootstrap": "^0.12.2",
     "angular-ui-router": "^0.2.15",
-    "bootstrap": "^3.3.5"
+    "bootstrap": "^3.3.5",
+    "express": "^4.13.3",
+    "html": "0.0.10"
   }
 }
